Compilador_Final/tests/invalid/test_e08_error_sintactico.drone
// Test con error 8: error sintáctico — falta punto y coma
drone condor
zona base(0, 0);

mision sin_punto_coma {
    despegar condor;
    aterrizar condor;
}
